Add staging config

--- a/app.json
+++ b/app.json
@@ -5,6 +5,11 @@
       "scripts": {
         "postdeploy": "php artisan migrate:fresh --seed --force"
       }
+    },
+    "staging": {
+      "scripts": {
+        "postdeploy": "php artisan migrate --force"
+      }
     }
   }
 }
