--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fzaninotto/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/passport": "^8.4",
         "laravel/telescope": "^3.2",
         "laravel/tinker": "^2.0"
     },
