updates composer lock file

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ LOG_CHANNEL=stack
 DB_CONNECTION=sqlite
 DB_DATABASE="{your_path_to_project}/database/database.sqlite"
 # to create database `touch database/database.sqlite`
+
+
+MAIL_FROM_ADDRESS=info@shareiftar.org
+MAIL_FROM_NAME="Share your iftar"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=
+MAIL_PASSWORD=
