--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,6 +17,10 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Create OAuth Keys
+      run: |
+        openssl genrsa -out storage/oauth-private.key 4096
+        openssl rsa -in storage/oauth-private.key -pubout > storage/oauth-public.key
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
