--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
+        "brainmaestro/composer-git-hooks": "^2.8",
         "facade/ignition": "^2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
@@ -34,6 +35,18 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "hooks": {
+            "pre-commit": [
+                "echo committing as $(git config user.name)"
+            ],
+            "pre-push": [
+                "php artisan test"
+            ],
+            "post-merge": [
+                "composer update",
+                "php artisan migrate"
+            ]
         }
     },
     "autoload": {
@@ -53,6 +66,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "cghooks": "vendor/bin/cghooks",
         "test": [
             "./vendor/bin/phpunit"
         ],
@@ -68,7 +82,11 @@
         ],
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan passport:keys"
+            "php artisan passport:keys",
+            "cghooks add --ignore-lock"
+        ],
+        "post-update-cmd": [
+            "cghooks update"
         ]
     }
 }
