--- a/composer.json
+++ b/composer.json
@@ -82,11 +82,8 @@
         ],
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan passport:keys",
-            "./vendor/bin/cghooks add --ignore-lock"
+            "php artisan passport:keys"
         ],
-        "post-update-cmd": [
-            "./vendor/bin/cghooks update"
-        ]
+        "post-update-cmd": []
     }
 }
