--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "^7.0",
         "laravel/passport": "^8.4",
         "laravel/telescope": "^3.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "sentry/sentry-laravel": "1.7.0"
     },
     "require-dev": {
         "brainmaestro/composer-git-hooks": "^2.8",
