--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,14 +1,19 @@
 server {
-    listen 443 ssl http2;
-    server_name api.shareiftar.org;
+    #listen 443 ssl http2;
+    #server_name api.shareiftar.org;
+
+    listen 80 default_server;
+    listen [::]:80 default_server;
+
     root "/var/www/shareiftar.org/current/public";
 
-    index index.html index.htm index.blade.php;
+    index index.html index.php index.htm index.blade.php;
 
     charset utf-8;
 
     location / {
-        try_files $uri $uri/ /index.blade.php?$query_string;
+        # URLs to attempt, including pretty ones.
+        try_files   $uri $uri/ /index.php?$query_string;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
@@ -24,7 +29,7 @@ server {
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
-        fastcgi_index index.blade.php;
+        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
