--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -4,6 +4,8 @@ server {
 
     listen 80 default_server;
     listen [::]:80 default_server;
+    
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     root "/var/www/shareiftar.org/current/public";
 
