--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-json": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
@@ -20,8 +21,8 @@
         "laravel/telescope": "^3.2",
         "laravel/tinker": "^2.0",
         "league/csv": "^9.6",
-        "sentry/sentry-laravel": "1.7.0",
-        "ext-json": "*"
+        "messagebird/php-rest-api": "^1.16",
+        "sentry/sentry-laravel": "1.7.0"
     },
     "require-dev": {
         "brainmaestro/composer-git-hooks": "^2.8",
